--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,29 +1,33 @@
-name: Lint with Flake8
+name: CI workflow
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
+    container: python:3.9-slim   
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
+        
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip intall -r requiriments.txt
           pip install flake8
 
       - name: Lint with Flake8
         run: |
-          flake8 .
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Run unit test with nose
+        run: |
+          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
 
