--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip intall -r requiriments.txt
+          pip install -r requiriments.txt
           pip install flake8
 
       - name: Lint with Flake8
