--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-          pip install nose
-          pip install nose-spec
+          pip install nose2
 
       - name: Lint with Flake8
         run: |
@@ -29,5 +28,5 @@ jobs:
 
       - name: Run unit test with nose
         run: |
-          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+          nose2 -v --with-spec --spec-color --with-coverage --cover-package=app
 
