--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-          pip install nose2
+          pip install nose2[coverage]
 
       - name: Lint with Flake8
         run: |
@@ -28,5 +28,5 @@ jobs:
 
       - name: Run unit test with nose
         run: |
-          nose2 -v --with-spec --spec-color --with-coverage --cover-package=app
+          nose2 --verbosity 2 --coverage-app
 
